fix: hover effect on mobile screen

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -28,4 +28,8 @@ button:hover {
     margin-top: 20px;
     width: 120px;
   }
+
+  button:hover {
+    font-size: 12px;
+  }
 }
